--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-python-telegram-bot==20.3
-O365==2.0.2
-openpyxl
-Pillow
+python-telegram-bot==20.7
+google-generativeai==0.3.2
+openpyxl==3.1.2
+msal==1.25.0
+requests==2.31.0
+python-dotenv==1.0.0
